2012-06-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (create_target_omp): Only check port when SSH credential
	is given.

2012-06-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-edit-target-form): If the port is empty make is
	22.

2012-06-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (result-detailed): Add References for second result in
	delta "changed" case.

2012-06-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-details): Match PDF report for Download
	column by name instead of ID, because the ID changes.

2012-06-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_oap.c (xsl_transform_omp): Add capabilities.

2012-06-07  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl: Add a show_closed_cves param everywhere that there is
	a autofp param.

	* src/gsad_omp.c (get_result): Add autofp arg.
	(get_result_omp): Pass show_closed_cves param to get_result.
	(new_note_omp, create_note_omp, delete_note_omp, edit_note_omp)
	(save_note_omp, new_override_omp, create_override_omp)
	(delete_override_omp, edit_override_omp, save_override_omp): Add
	show_closed_cves params alongside autofp params.

2012-06-05  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/help.xsl (view_report.html): Update Back to Tasks link text.

	* src/html/omp.xsl (report [details]): Do token in links in Closed CVEs
	table with a variable because they're inside a for-each.

2012-06-05  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_report): Pass show_closed_cves to Manager now that
	there is OMP support for this.  Remove SHOW_CLOSED_CVES from XML because
	it's in the OMP report now.

	* src/html/omp.xsl (html-report-details): Add show_closed_cves params to
	alert and download columns.  Update checks for Closed CVEs checkbox and
	table to use OMP value of SHOW_CLOSED_CVES.
